[gd_scene load_steps=6 format=2]

[ext_resource path="res://Components/Card/Card.gd" type="Script" id=1]
[ext_resource path="res://Sounds/ball_checked.mp3" type="AudioStream" id=2]
[ext_resource path="res://Sounds/ball_unchecked.mp3" type="AudioStream" id=3]
[ext_resource path="res://Sounds/line_sound.mp3" type="AudioStream" id=4]
[ext_resource path="res://Resources/Card/CardNumberGenerator.tscn" type="PackedScene" id=5]

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="Container" type="MarginContainer" parent="."]
margin_left = 704.0
margin_top = 320.0
margin_right = 1216.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LinesContainer" type="VBoxContainer" parent="Container"]
margin_right = 512.0
margin_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 75
alignment = 1

[node name="BallUncheck" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -9.972
pitch_scale = 1.6

[node name="BallCheck" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="LineCheck" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.467
pitch_scale = 0.56

[node name="CardNumberGenerator" parent="." instance=ExtResource( 5 )]

[connection signal="finished" from="BallUncheck" to="." method="_on_BallUncheck_finished"]
[connection signal="finished" from="BallCheck" to="." method="_on_BallCheck_finished"]
